--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "uma_quiz"
-version = "0.2.1"
+version = "0.3.0"
 edition = "2024"
 
 [dependencies]
@@ -10,3 +10,4 @@ serde_json = "1.0"
 proconio = "0.5.0"
 color-eyre = "0.6.5"
 colored = "3"
+chrono = { version = "0.4.41", features = ["serde"] }
